# python-runtime-benchmarks

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_benchmark.py
benchmarks/: __init__.py  mixed_heavy_io.py  numpy_scipy_math.py  pure_python_math.py  results1.md
runners/: __init__.py  runner.py  runtime_detector.py  timing_utils.py
