[project]
name = "python-runtime-benchmark"
version = "1.0.0"
description = "Benchmark suite for comparing Python runtimes (CPython, PyPy, UV)"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
